--- a/src/lombok.config
+++ b/src/lombok.config
@@ -21,3 +21,5 @@ lombok.addLombokGeneratedAnnotation = true
 ## If true, fields without any access modifier, in any file (lombok annotated or not) are marked as private. Use @PackagePrivate or an explicit modifier to override this.
 
 # lombok.fieldDefaults.defaultPrivate = true
+
+lombok.anyConstructor.addConstructorProperties = true
