feat: generate jwt when loggin

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,8 @@ INFLUXDB_ADMIN_PASSWORD=example-admin-password
 
 # SonarCloud login token
 SONARCLOUD_LOGIN=example-login-token
+
+# Jwt configuration
+SPRING_JWT_SECRET=example-jwt-token
+
+SPRING_JWT_EXPIRATION_TIME=expiration-time
