--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,8 @@ spring.influx.password=${influxdbAdminPassword}
 # ===============================
 # TODO write necessary configuration here
 
+spring.jwt.secret=T3VyU2VjdXJlU2VjcmV0TG9uZ0tleUZvclN0YWxrZXJKV1R0b2tlbnM=
+spring.jwt.expirationtime=40000
 # ===============================
 # = OTHER
 # ===============================
