refactor: standardize jwt configuration

--- a/.env.template
+++ b/.env.template
@@ -6,10 +6,8 @@ MYSQL_ROOT_PASSWORD=example-root-password
 # InfluxDB
 INFLUXDB_ADMIN_PASSWORD=example-admin-password
 
+# JWT configuration
+JWT_SECRET=example-jwt-secret
+
 # SonarCloud login token
 SONARCLOUD_LOGIN=example-login-token
-
-# Jwt configuration
-SPRING_JWT_SECRET=example-jwt-token
-
-SPRING_JWT_EXPIRATION_TIME=expiration-time
