--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,9 +33,12 @@ spring.influx.password=${influxdbAdminPassword}
 # = SECURITY
 # ===============================
 # TODO write necessary configuration here
+# FIXME put encoded secret inside .env
+# jwt.secret=${jwtSecret}
+jwt.secret=T3VyU2VjdXJlU2VjcmV0TG9uZ0tleUZvclN0YWxrZXJKV1R0b2tlbnM=
+jwt.expiration-time=40000
 
-spring.jwt.secret=T3VyU2VjdXJlU2VjcmV0TG9uZ0tleUZvclN0YWxrZXJKV1R0b2tlbnM=
-spring.jwt.expirationtime=40000
+
 # ===============================
 # = OTHER
 # ===============================
