chore: improve vscode tasks and intellij configurations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,9 +23,9 @@
   "git.fetchOnPull": false,
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
-  "java.format.enabled": true,
-  "java.format.onType.enabled": true,
-  "java.format.comments.enabled": true,
+  "java.format.enabled": false,
+  "java.format.onType.enabled": false,
+  "java.format.comments.enabled": false,
   "java.codeGeneration.generateComments": true,
   "java.codeGeneration.useBlocks": true,
   "java.completion.guessMethodArguments": true,
