feat: implement post organizations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.application.version=${version}
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.username=root
 spring.r2dbc.password=${mysqlRootPassword}
+# r2dbc logging level
+logging.level.org.springframework.data.r2dbc=INFO
 
 
 # ===============================
