--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,7 @@ spring.influx.password=${influxdbAdminPassword}
 # ===============================
 # TODO write necessary configuration here
 # FIXME put encoded secret inside .env
-# jwt.secret=${jwtSecret}
-jwt.secret=T3VyU2VjdXJlU2VjcmV0TG9uZ0tleUZvclN0YWxrZXJKV1R0b2tlbnM=
+jwt.secret=${jwtSecret}
 jwt.expiration-time=40000
 
 
