--- a/build.gradle
+++ b/build.gradle
@@ -53,12 +53,10 @@ dependencies {
  // implementation 'org.springframework.ldap:spring-ldap-core'
  // implementation 'org.springframework.security:spring-security-ldap'
 
-// TODO not sure about this ^
-
 // Provides a platform neutral way for running an LDAP server in unit tests.
- // implementation 'com.unboundid:unboundid-ldapsdk'
+  implementation 'com.unboundid:unboundid-ldapsdk'
 
-  // Dependency for LDAP API
+// Dependency for LDAP API
   implementation 'org.apache.directory.api:api-all:2.0.1'
 
 //  Java annotation library which helps to reduce boilerplate code.
@@ -87,7 +85,7 @@ dependencies {
   }
 
   testImplementation 'io.projectreactor:reactor-test'
-  //testImplementation 'org.springframework.security:spring-security-test'
+  testImplementation 'org.springframework.security:spring-security-test'
 
   // ---------------------------------------------------------------------------------
 
