--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,10 @@ management.endpoints.enabled-by-default=false
 management.endpoint.health.enabled=true
 management.endpoint.mappings.enabled=true
 management.endpoints.web.exposure.include=*
+
+# ===============================
+# = LDAP CONFIGURATION
+# ===============================
+spring.ldap.embedded.port=8389
+spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
