chore: fail gradle tasks when environment variables are not set
ISSUES CLOSED: fix #94

--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,14 @@
 # Example .env file for stalker-server
+# The values should go after the "=", unquoted and without unnecessary whitespace
 
 # MySQL
-MYSQL_ROOT_PASSWORD=example-root-password
+MYSQL_ROOT_PASSWORD=
 
 # InfluxDB
-INFLUXDB_ADMIN_PASSWORD=example-admin-password
+INFLUXDB_ADMIN_PASSWORD=
 
-# JWT configuration
-JWT_SECRET=example-jwt-secret
+# JWT
+JWT_SECRET=
 
 # SonarCloud login token
-SONARCLOUD_LOGIN=example-login-token
+SONARCLOUD_LOGIN=
