--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,14 @@
 {
   "configurations": [
-    // FIXME this configuration does not work
     {
       "type": "java",
       "name": "Spring Boot-ServerApplication<stalker-server>",
-      "request": "attach",
-      "hostName": "localhost",
-      "port": 11111,
-      "preLaunchTask": {
-        "task": "${defaultBuildTask}",
-      }
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "console": "internalConsole",
+      "mainClass": "tech.gruppone.stalker.server.ServerApplication",
+      "projectName": "stalker-server",
+      "args": ""
     }
   ]
 }
