ci(actions): add basic environment variable values in relevant actions

--- a/.github/workflows/sonarcloud-master-scanner.yml
+++ b/.github/workflows/sonarcloud-master-scanner.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - master
 
+env:
+  MYSQL_ROOT_PASSWORD: definitelyNotASecurePassword
+  INFLUXDB_ADMIN_PASSWORD: definitelyNotASecurePassword
+  JWT_SECRET: definitelyNotASecurePassword
+
 jobs:
   sonarcloud-master-scanner:
     name: Fully scan master with SonarCloud
