--- a/.github/workflows/dynamic-analysis.yml
+++ b/.github/workflows/dynamic-analysis.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - master
 
+env:
+  MYSQL_ROOT_PASSWORD: definitelyNotASecurePassword
+  INFLUXDB_ADMIN_PASSWORD: definitelyNotASecurePassword
+  JWT_SECRET: definitelyNotASecurePassword
+
 jobs:
   minimum-coverage:
     name: Unit tests passing and coverage > 80%
@@ -34,6 +39,13 @@ jobs:
       - name: Run gradle test coverage verification
         if: always()
         run: ./gradlew --console=plain --warning-mode=all --info --continue jacocoTestCoverageVerification
+
+      - name: Upload all generated reports
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: reports
+          path: build/reports/
 
   test:
     name: Run gradle check
