--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - master
 
+env:
+  MYSQL_ROOT_PASSWORD: definitelyNotASecurePassword
+  INFLUXDB_ADMIN_PASSWORD: definitelyNotASecurePassword
+  JWT_SECRET: definitelyNotASecurePassword
+
 jobs:
   check-format:
     name: Check formatting
