--- a/src/lombok.config
+++ b/src/lombok.config
@@ -1,25 +1,8 @@
-##
-## Key : config.stopBubbling
-## Type: boolean
-##
 ## Tell the configuration system it should stop looking for other configuration files (default: false).
-
 config.stopBubbling = true
 
-##
-## Key : lombok.addLombokGeneratedAnnotation
-## Type: boolean
-##
 ## Generate @lombok.Generated on all generated code (default: false).
-
 lombok.addLombokGeneratedAnnotation = true
 
-##
-## Key : lombok.fieldDefaults.defaultPrivate
-## Type: boolean
-##
-## If true, fields without any access modifier, in any file (lombok annotated or not) are marked as private. Use @PackagePrivate or an explicit modifier to override this.
-
-# lombok.fieldDefaults.defaultPrivate = true
-
+## This is necessary to serialize/deserialize values in spring jackson and r2dbc
 lombok.anyConstructor.addConstructorProperties = true
