--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,5 @@ jwt.expiration-time=40000
 # ===============================
 spring.main.banner-mode=off
 # spring.main.lazy-initialization=true
+# TODO test if this works
+# spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=true
