refactor: move api model to subfolders for clarity

--- a/api/model/organization/OrganizationRole.v1.yaml
+++ b/api/model/organization/OrganizationRole.v1.yaml
@@ -2,9 +2,9 @@ title: User Roles in a specific organization
 type: object
 properties:
   userId:
-    $ref: ./GenericId.v1.yaml
+    $ref: ../GenericId.v1.yaml
   role:
-    $ref: ./AdministratorType.v1.yaml
+    $ref: ../AdministratorType.v1.yaml
 required:
   - userId
   - role
