--- a/api/model/organization/Place.v1.yaml
+++ b/api/model/organization/Place.v1.yaml
@@ -3,7 +3,7 @@ type: object
 description: Represents a location relative to which an organization wants to track its users movements.
 properties:
   id:
-    $ref: ./GenericId.v1.yaml
+    $ref: ../GenericId.v1.yaml
   data:
     $ref: ./PlaceData.v1.yaml
 required:
