feat: add docker images and first ldif

--- a/.env.template
+++ b/.env.template
@@ -21,4 +21,4 @@ EMAIL_ACCOUNT_PASSWORD=
 SONARCLOUD_LOGIN=
 
 # Admin password to access Gruppone's LDAP directory
-LDAP_ADMIN_PASSWORD=example-ldap-admin-password
+LDAP_ADMIN_PASSWORD=
