--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,6 @@ EMAIL_ACCOUNT_PASSWORD=
 
 # SonarCloud login token
 SONARCLOUD_LOGIN=
+
+# Admin password to access Gruppone's LDAP directory
+LDAP_ADMIN_PASSWORD=example-ldap-admin-password
