--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 // Provides a platform neutral way for running an LDAP server in unit tests.
   implementation 'com.unboundid:unboundid-ldapsdk'
 
+  // Dependency for LDAP API
+  implementation 'org.apache.directory.api:api-all:2.0.1'
+
 //  Java annotation library which helps to reduce boilerplate code.
   compileOnly 'org.projectlombok:lombok'
 
