--- a/build.gradle
+++ b/build.gradle
@@ -49,14 +49,14 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 //  Highly customizable authentication and access-control framework for Spring applications.
-  implementation 'org.springframework.boot:spring-boot-starter-security'
-  implementation 'org.springframework.ldap:spring-ldap-core'
-  implementation 'org.springframework.security:spring-security-ldap'
+ // implementation 'org.springframework.boot:spring-boot-starter-security'
+ // implementation 'org.springframework.ldap:spring-ldap-core'
+ // implementation 'org.springframework.security:spring-security-ldap'
 
 // TODO not sure about this ^
 
 // Provides a platform neutral way for running an LDAP server in unit tests.
-  implementation 'com.unboundid:unboundid-ldapsdk'
+ // implementation 'com.unboundid:unboundid-ldapsdk'
 
   // Dependency for LDAP API
   implementation 'org.apache.directory.api:api-all:2.0.1'
@@ -87,7 +87,7 @@ dependencies {
   }
 
   testImplementation 'io.projectreactor:reactor-test'
-  testImplementation 'org.springframework.security:spring-security-test'
+  //testImplementation 'org.springframework.security:spring-security-test'
 
   // ---------------------------------------------------------------------------------
 
